# swarm-manager

./: .gitignore  404.html  Cargo.toml  GOD_LEVEL_IMPLEMENTATION_ROADMAP.md  LICENSE  PHASE1_WEEK1_ACTIONS.md  PHASE1_WEEK1_DAY2_SUMMARY.md  PHASE1_WEEK1_DAY3_SUMMARY.md  PHASE1_WEEK2_DAY4_SUMMARY.md  README.md  build.sh  index.html  mkdocs.yml  sitemap.xml  test.sh
.cargo/: config.toml.military
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  docs.yml  release.yml
MILITARY_INTEGRATION/: index.html
community/: index.html
community/faq/: index.html
developer-guide/: index.html
developer-guide/architecture/: index.html
developer-guide/security/: index.html
docs/: Gemfile  MILITARY_INTEGRATION.md  _config.yml  api-reference.md  architecture.md  benchmarks.md  examples.md  faq.md  getting-started.md  hardware-esp32.md  hardware-px4.md  hardware-stm32.md  index.md  research.md  security.md  tutorials.md
docs/community/: index.md
docs/developer-guide/: architecture.md  index.md  security.md
docs/hardware/: index.md  px4.md
docs/reference/: api.md  index.md
docs/user-guide/: index.md  tutorials.md
examples/: aco_path_planning.rs  aco_sitl_navigation.rs  collision_avoidance_demo.rs  deep_rl_optimization.rs  esp32_mesh_simulation.rs  failsafe_system_demo.rs  flight_control_demo.rs  gwo_swarm_optimization.rs  high_strain_swarm_simulation.rs  pso_optimization.rs  simple_swarm.rs  sitl_connection.rs  swarm_formation_sitl.rs  swarm_sitl.rs  telemetry_monitoring.rs  time_benchmark.rs  time_source_esp32.rs  time_source_stm32.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: consensus_message.rs  crypto_roundtrip.rs  network_message.rs
hardware/: index.html
hardware/esp32/: index.html
hardware/px4/: index.html
hardware/stm32/: index.html
knowledge base/Edison AI/: 20251228-180244-b78fc9.jsonl  GOD_LEVEL_ENHANCEMENT_PROMPTS.txt  MASTER_GOD_LEVEL_PROMPT.txt  MASTER_REVOLUTIONARY_OVERHAUL_PROMPT_V2.txt  README.md  REVOLUTIONARY_ENHANCEMENT_PROMPTS_V2.txt  notebook.ipynb
military/: .gitkeep
reference/: index.html
reference/api/: index.html
reference/benchmarks/: index.html
reference/research/: index.html
scripts/: setup-military.sh
search/: search_index.json
simulation/: README.md
src/: aco.rs  chaos_monkey.rs  cluster_manager.rs  collision_avoidance.rs  config.rs  consensus.rs  crypto.rs  esp32_mesh.rs  failsafe.rs  fault_injector.rs  fault_tolerance.rs  federated.rs  gwo.rs  hierarchical_consensus.rs  hierarchy_types.rs  hybrid_optimizer.rs  lib.rs  link_predictor.rs  mavlink_controller.rs  mesh_protocol.rs  mission_planning.rs  multi_drone_coordinator.rs  network.rs  pbft.rs  proactive_routing.rs  pso.rs  pso_advanced.rs  resilience_scorer.rs  rng.rs  security.rs  swarm.rs  task_allocation.rs  telemetry.rs  time_abstraction.rs  trajectory_predictor.rs  types.rs  woa.rs
src/algorithms/: aco.rs  gwo.rs  hybrid.rs  meta_heuristic.rs  mod.rs  rng.rs  selector.rs  woa.rs
src/algorithms/pso/: mod.rs
src/consensus/: hierarchical.rs  merkle.rs  mod.rs  pbft.rs  raft.rs
src/control/: formation.rs  mod.rs  motor.rs  state_manager.rs  swarm.rs  task.rs  velocity.rs
src/extensions/: mod.rs
src/hardware/: mod.rs  rng.rs
src/ml/: federated.rs  mod.rs
src/network/: esp32.rs  mavlink.rs  mesh.rs  mod.rs
src/network/routing/: mod.rs  proactive.rs
src/safety/: chaos_monkey.rs  crypto.rs  failsafe.rs  fault_tolerance.rs  mod.rs  scorer.rs  security.rs
src/system/: clustering.rs  config.rs  mod.rs  telemetry.rs
templates/military-crate/: Cargo.toml
templates/military-crate/src/: lib.rs
templates/military-crate/src/comm/: mod.rs
templates/military-crate/src/crypto/: mod.rs
templates/military-crate/src/tactical/: mod.rs
tests/: aco_tests.rs  advanced_stress_tests.rs  collision_avoidance_tests.rs  config_tests.rs  consensus_tests.rs  crypto_tests.rs  deep_rl_tests.rs  failsafe_tests.rs  fault_tolerance_tests.rs  federated_tests.rs  gwo_tests.rs  mission_planning_tests.rs  network_tests.rs  property_tests.rs  pso_advanced_tests.rs  scalability_tests.rs  security_tests.rs  stress_tests.rs  swarm_tests.rs  time_tests.rs  types_tests.rs
user-guide/: index.html
user-guide/examples/: index.html
user-guide/getting-started/: index.html
user-guide/tutorials/: index.html
visualization/src/: app.rs  main.rs  state.rs  themes.rs
visualization/src/panels/: algorithm.rs  controls.rs  metrics.rs  mod.rs  network.rs  safety.rs  viewport.rs
visualization/src/renderers/: aco_renderer.rs  consensus_renderer.rs  de_renderer.rs  drone_renderer.rs  federated_renderer.rs  gwo_renderer.rs  mod.rs  network_renderer.rs  pso_renderer.rs
