[workspace]
members = [".", "visualization"]

[package]
name = "drone-swarm-system"
version = "0.1.0"
edition = "2021"
authors = ["Drone Swarm Team"]
description = "Ultra-secure drone swarm communication system with federated learning"

[dependencies]
# Core embedded support
embedded-hal = "1.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

# Networking
smoltcp = { version = "0.11", default-features = false, features = ["proto-ipv4", "proto-ipv6", "socket-udp", "socket-tcp", "medium-ip", "medium-ethernet"] }
heapless = { version = "0.8", features = ["serde"] }

# Cryptography - Post-quantum ready
chacha20poly1305 = { version = "0.10", default-features = false, features = ["heapless"] }
aead = { version = "0.5", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false }
sha3 = { version = "0.10", default-features = false }
blake3 = { version = "1.5", default-features = false }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }

# Random number generation (TRNG support)
rand_core = { version = "0.6", default-features = false }
getrandom = { version = "0.2", default-features = false }

# Serialization
postcard = { version = "1.0", default-features = false, features = ["heapless"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-big-array = "0.5"

# Time and scheduling
fugit = "0.3"

# Math library for no_std
libm = "0.2"

# Optional logging for debugging
defmt = "0.3"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller binary

[profile.dev]
opt-level = 1        # Some optimization for testing

[dev-dependencies]
# Property-based testing
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Fuzzing support (use with cargo-fuzz)
arbitrary = { version = "1.3", features = ["derive"] }

[features]
default = ["std"]
std = []
no_std = []
hardware = []  # Enable hardware radio/network I/O (not yet implemented)
hardware-crypto = []  # Enable hardware crypto accelerators
post-quantum = []     # Enable post-quantum cryptography
simulation = ["std", "mavlink"]  # Enable SITL simulation support

# MAVLink protocol support (optional, requires std)
[dependencies.mavlink]
version = "0.13"
optional = true
default-features = true
features = ["common", "ardupilotmega", "std", "tcp", "udp", "direct-serial"]

# Async runtime for simulation (optional)
[target.'cfg(not(target_os = "none"))'.dependencies]
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "macros", "time", "sync"], optional = true }

[[example]]
name = "sitl_connection"
path = "examples/sitl_connection.rs"
required-features = ["simulation"]

[[example]]
name = "swarm_sitl"
path = "examples/swarm_sitl.rs"
required-features = ["simulation", "tokio"]

[[example]]
name = "pso_sitl_formation"
path = "examples/pso_sitl_formation.rs"
required-features = ["simulation"]

[[example]]
name = "aco_sitl_navigation"
path = "examples/aco_sitl_navigation.rs"
required-features = ["simulation"]
